Updated spec from #pinoccio project blathers user comments: Hi blathers, thank you for the great comments and questions on ATP! blathers, I updated the spec document to incorporate your changes and feedback it now reflects the push-pull approach I added text to describe the network and stack ATP needs AUID is a hash for situations where a peer crashed or went offline temporarily during a transfer session. I changed the AUID spec to include a 2 bit packet-type value. I moved the version byte forward. I changed the file type descriptor to a 5 character array, and reference MIME type abbreviations from http://www.abbreviations.com/acronyms/MIMETYPES The Source and Destination fields are used depending on which peer you are in: Lead Peer will use Destination while Peer 1 will use Source I changed Filename to be a null-terminated string I’m not sure how the compression mechanism will actually work. We will see. The spec will likely change once I implement the protocol. The lengths in the packets are after compression. Finally, I did not use a markup format like markdown or restructured text because I didn’t know about them. And now I do! :-) Thanks!

--- a/ATransferProtocol/library.properties
+++ b/ATransferProtocol/library.properties
@@ -1,8 +1,7 @@
-name=Atmel Lightweight Mesh framework
-version=1.1.1
-author=Atmel Corporation
-maintainer=Matthijs Kooijman <matthijs@stdin.nl>
-sentence=Arduino port of the Lightweight Mesh stack provided by Atmel.
-paragraph=Supports lightweight mesh networking using 802.15.4 tranceivers (and microcontrollers with builtin tranceivers) from Atmel.  This library was created to support the Pinoccio Scout hardware, but should work on other hardware as well.
-url=https://github.com/Pinoccio/library-atmel-lwm
+name=A Transfer Protocol (ATP)
+version=0.1
+author=Frank Cohen <fcohen@votsh.com>
+maintainer=Frank Cohen <fcohen@votsh.com>
+sentence=Easy and efficient file transfer between microcontrollers over a mesh or point-to-point radio network.
+paragraph=The Votsh Waves project distributes audio and light show information from a server through a lead-peer microcontroller to peer microcontrollers. The peers use Atmel 802.15.4 radios in the ATmega256RFR2 chip to form a mesh network, or XBee radios.url=http://www.votsh.com
 architectures=avr
